{{$NEXT}}

0.6.4  2021-07-14T16:12:56+12:00
    - Add associative methods to LibXML::Dtd::ElementDecl, including keys(),
      values(), pairs(), AT-KEY)() and Hash

0.6.3  2021-06-17T11:25:31+12:00
    - Fixed t/02parser.t segfault on Rakudo 2020.05.1 introduced in 0.6.1 #59
    - Fixed node over-visitation in reference checking #58
    - Revised document Str and Buf method. :skip-dtd option to copy then
      update the document rather than mutating it.

0.6.2  2021-06-16T13:57:49+12:00
    - Remove entity reference content when a DtD is unlinked
    - Make it illegal to add declaration nodes to the general DOM
    - Add $elem.validate() and $elem.is-valid() methods

0.6.1  2021-06-14T13:16:33+12:00
    - Improved Dtd Handling #30
      -- Added raw class xmlNotation,
      -- Added API class LibXML::Dtd::Notation
      -- Added LibXML::Dtd methods:
         --- notations() entities(), element-declarations(), attribute-declarations()
             getNotation(), getEntity(), getElementDeclaration(),
             getAttrDeclaration(), getNodeDeclaration()
      -- Changed LibXML::Dtd repr from 'CStruct' to default, so that it may
         contain additional attributes.
      -- Rename classes:
         --- LibXML::Dtd::Attr -> LibXML::Dtd::AttrDecl and
         --- LibXML::Dtd::Element -> LibXML::Dtd::ElementDecl
         --- LibXML::Entity -> LibXML::Dtd::Entity
      -- Add  LibXML::Dtd elements() method
    - Removed some module loading work-arounds for Rakudo < 2019.03
    - Fixed memory leaks in $doc.setDocumentElement and document parse failure #55
    - Fixed segfault in unlinking DtD #56
    - Fixed valgrind errors in t/07dtd.t. Specifically, $doc.replaceChild($dtd), which
      should be a no-op.
    - Fix GC on entities. Don't attempt to free predefined entities.

0.6.0  2021-05-29T09:37:12+12:00
    - Fix attribute isId() method to return Bool, as documented.
    - Integration with W3C::DOM interface roles: